Выполнить техническое задание - спринт 15 (первая проверка)